decently finished bio

--- a/bio/index.html
+++ b/bio/index.html
@@ -8,16 +8,42 @@
 <div class="emblem"><span class="icon-information"></span></div>
 <div class="frame">
   <div class="piece output">
-    <h1>bio:graphy</h1>
-    <p>> subject: Ren {Omnisai} </p>
-    <p>> identitiy: human no. 105.102.249.130</p>
-    <p>> classification: male ♂️</p>
+    <h1>bio:graph</h1>
+    <p>> subject [00095] : Ren {Omnisai} </p>
+    <p>> sobriquet : Nines {YoRHa}</p>
+    <p>> identitiy : human no. 105.102.249.130</p>
+    <p>> classification : male ♂️</p>
     <p>> introduction "zdravo, i'm a 18 year-old programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; otaku [VALIDITY:] as reffered to by Makoto Shinkai; and unprofessional artsit, novelist, conceptual futurist, engineering, 3d-modeler, yu-gi-oh and magic-the-gathering player."</p>
     <!-- <img src="../images/home/ddd.gif" width="400px"> -->
-    <p>> preferences: "i like alot of things; computers, electronics, CUSTOM (ERGO) KEYBOARDS, anime, MANGA, books, lain, juiceboxes reading, (rock, math, fantastical, complex, japanese, korean, experimental, etc) music,
-    retro beige styled electronics, █████, wind, nightime, 3d printing, engineering, hand wiring, learning, programming, nier, editing, knives, writing, etc." /redundant/</p>
-    <p>> favorite color: #000000</p>
-    <p><a href="https://relivesight.com">home</a></p>
+    <p>> preferences : "i like alot of things; computers, electronics, CUSTOM (ERGO) KEYBOARDS, anime, MANGA, books, lain, juice-boxes reading, (rock, math, fantastical, complex, japanese, korean, experimental, etc) music,
+    retro beige styled electronics, █████, wind, mcr, nightime, 3d printing, engineering, hand wiring, learning, programming, nier, editing, knives, writing, etc." /redundant/</p>
+    <p>> favorite color : #000000</p>
+    <p>> contact : discord[Omnisai#2639] : line[omnisai] : steam[Cabandadan]</p>
+    <p>> associated : present</p>
+    <p>> quality : [ụ̸̉̓̃̌͌̇͂͂͂̉͒̅͝ń̵̦͖̦̝̝̞̤͒̈́̄̕ǻ̴̢̳̗̥̭̟̬̜̪̣̖͒̽́̾͊̈͛̒̒̑̿͘͘l̵͓̳̋̄͘l̴̯͉̥̻̊́̀͆̀͗̎̓́̉̇̿̉̚̕o̸̢̘̙̖͖̯̱͚̮̦̦̗͉̍͂͛̉́͑̍͂̑͊̿͑̕͠͝c̷̡̡̡͍̞̤͎̠̪̪͎̼͚̫͇̳̰̫̬͆̽̓͊̋̄͊͛̍̾̏̍̿̌̀̃̔̕͝a̴̰̭̩̓̈́̈́̈́̅̊̀͊̎̌͘͝͠t̷̢̢̛̮̹̭͔̯̩̗̯̞̊̌͐̾̓̄̅͗̀̓̓͜ͅë̵̢̢͓̦͍͇͙̹͖͔͓́̍̂͗̏͋̐͑̿͑̎̈́͘ď̶̛̖̳̪̪̝͉̘̪̭̳̲͓̝̪̗̲́́̎͂͗͂̀̉̐̈́͆͘̕͜͜͜]</p>
+    <p><a href="https://relivesight.com">return return return return return</a></p>
+    <h2>vers:ation</h2>
+    <p>> [no. 03] : "If something decides it wants to fly, will it grow wings? You don't change yourself, you change the way you do things. You have to create a way to fly, even while you stay the same."</p>
+    <p>> [no. 00095] : "People only have substance within the memories of other people."</p>
+    <p>> [no. 03] : "Man fears the darkness, and so he scrapes away at the edges of it with fire."</p>
+    <p>> [no. 00095] : "The universe has a beginning, but no end. — Infinity. Stars, too, have their own beginnings, but their own power results in their destruction. — Finite."</p>
+    <p>> [no. 03] : "People save themselves on their own. Nobody can ever save someone else."</p>
+    <p>> [no. 00095] : "The tendrils of my hair illuminate beneath the amber glow.
+Bathing.
+It must be this one.
+The last remaining streetlight to have withstood the test of time.
+The last yet to be replaced by the sickening blue-green of the future.
+I bathe. Calm; breathing air of the present but living in the past.
+The light flickers.
+I flicker back."</p>
+    <p>> [no. 03] : "Everything that lives is designed to end. We are perpetually trapped in a never-ending spiral of life and death. Is this a curse? Or some kind of punishment? I often think about the god who blessed us with this cryptic puzzle...and wonder if we'll ever get the chance to kill him."</p>
+    <p>> [no. 00095] : "If i didnt make that promise for her, you'd be dead where you stand."</p>
+    <p>> [no. 03] : "If we all reacted the same way, we'd be predictable, and there's always more than one way to view a situation...It's simple: overspecialize, and you breed in weakness. It's slow death."</p>
+    <p>> [no. 00095] : "Mathematics catalogues everything that is not self-contradictory; within that vast inventory, physics is an island of structures rich enough to contain their own beholders."</p>
+    <p>> [no. 03] : "It’s better to have questions you can’t answer than answers you can’t question."</p>
+    <p>> [no. 00095] : "The unexamined life is not worth living."</p>
+    <p>> [no. 03] : "..."</p>
+
   </div>
   <div class="piece scanlines noclick"></div>
   <div class="piece glow noclick"></div>
