--- a/bio/index.html
+++ b/bio/index.html
@@ -43,7 +43,7 @@ I flicker back."</p>
     <p>> [no. 03] : "It’s better to have questions you can’t answer than answers you can’t question."</p>
     <p>> [no. 00095] : "The unexamined life is not worth living."</p>
     <p>> [no. 03] : "..."</p>
-
+    <p><a href="/bio/static">total</a></p>
   </div>
   <div class="piece scanlines noclick"></div>
   <div class="piece glow noclick"></div>
