--- a/bio/index.html
+++ b/bio/index.html
@@ -13,6 +13,7 @@
     <p>> sobriquet : Nines {YoRHa}</p>
     <p>> identitiy : human no. 105.102.249.130</p>
     <p>> classification : male ♂️</p>
+        <img src="../images/bio/2.png" width="400px">
     <p>> introduction "zdravo, i'm a 18 year-old programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; otaku [VALIDITY:] as reffered to by Makoto Shinkai; and unprofessional artsit, novelist, conceptual futurist, engineering, 3d-modeler, yu-gi-oh and magic-the-gathering player."</p>
     <!-- <img src="../images/home/ddd.gif" width="400px"> -->
     <p>> preferences : "i like alot of things; computers, electronics, CUSTOM (ERGO) KEYBOARDS, anime, MANGA, books, lain, juice-boxes reading, (rock, math, fantastical, complex, japanese, korean, experimental, etc) music,
