--- a/bio/index.html
+++ b/bio/index.html
@@ -14,7 +14,7 @@
     <p>> identitiy : human no. 105.102.249.130</p>
     <p>> classification : male ♂️</p>
         <img src="../images/bio/2.png" width="400px" class="ribbon">
-    <p>> introduction "zdravo, i'm a 18 year-old programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; otaku [VALIDITY:] as reffered to by Makoto Shinkai; and unprofessional artsit, novelist, conceptual futurist, engineering, 3d-modeler, yu-gi-oh and magic-the-gathering player."</p>
+    <p>> introduction "zdravo, i'm a 18 year-old programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; otaku [VALIDITY:] as reffered to by Makoto Shinkai; and unprofessional artsit, novelist, conceptual futurist, engineer, 3d-modeler, yu-gi-oh and magic-the-gathering player."</p>
     <!-- <img src="../images/home/ddd.gif" width="400px"> -->
     <p>> preferences : "i like alot of things; computers, electronics, CUSTOM (ERGO) KEYBOARDS, anime, MANGA, books, lain, juice-boxes reading, (rock, math, fantastical, complex, japanese, korean, experimental, etc) music,
     retro beige styled electronics, █████, wind, mcr, nightime, 3d printing, engineering, hand wiring, learning, programming, nier, editing, knives, writing, etc." /redundant/</p>
