--- a/bio/index.html
+++ b/bio/index.html
@@ -19,7 +19,8 @@
     <p>> preferences : "i like alot of things; computers, electronics, CUSTOM (ERGO) KEYBOARDS, anime, MANGA, books, lain, juice-boxes reading, (rock, math, fantastical, complex, japanese, korean, experimental, etc) music,
     retro beige styled electronics, █████, wind, mcr, nightime, 3d printing, engineering, hand wiring, learning, programming, nier, editing, knives, writing, etc." /redundant/</p>
     <p>> favorite color : #000000</p>
-    <p>> contact : discord[Omnisai#2639] : line[omnisai] : steam[Cabandadan]</p>
+    <!-- discord[Omnisai#2639] : line[omnisai] :  -->
+    <p>> contact : discord[𝒞𝒶𝒷𝒶𝓃𝒹𝒶𝒹𝒶𝓃#7416] : steam[Cabandadan]</p>
     <p>> associated : present</p>
     <p>> quality : [ụ̸̉̓̃̌͌̇͂͂͂̉͒̅͝ń̵̦͖̦̝̝̞̤͒̈́̄̕ǻ̴̢̳̗̥̭̟̬̜̪̣̖͒̽́̾͊̈͛̒̒̑̿͘͘l̵͓̳̋̄͘l̴̯͉̥̻̊́̀͆̀͗̎̓́̉̇̿̉̚̕o̸̢̘̙̖͖̯̱͚̮̦̦̗͉̍͂͛̉́͑̍͂̑͊̿͑̕͠͝c̷̡̡̡͍̞̤͎̠̪̪͎̼͚̫͇̳̰̫̬͆̽̓͊̋̄͊͛̍̾̏̍̿̌̀̃̔̕͝a̴̰̭̩̓̈́̈́̈́̅̊̀͊̎̌͘͝͠t̷̢̢̛̮̹̭͔̯̩̗̯̞̊̌͐̾̓̄̅͗̀̓̓͜ͅë̵̢̢͓̦͍͇͙̹͖͔͓́̍̂͗̏͋̐͑̿͑̎̈́͘ď̶̛̖̳̪̪̝͉̘̪̭̳̲͓̝̪̗̲́́̎͂͗͂̀̉̐̈́͆͘̕͜͜͜]</p>
     <p><a href="https://relivesight.com">return return return return return</a></p>
