nno morer vietnameses

--- a/bio/index.html
+++ b/bio/index.html
@@ -22,7 +22,7 @@
     <!-- discord[Omnisai#2639] : line[omnisai] :  -->
     <p>> contact : discord[𝒞𝒶𝒷𝒶𝓃𝒹𝒶𝒹𝒶𝓃#7416] : steam[Cabandadan]</p>
     <p>> associated : present</p>
-    <p>> quality : [ụ̸̉̓̃̌͌̇͂͂͂̉͒̅͝ń̵̦͖̦̝̝̞̤͒̈́̄̕ǻ̴̢̳̗̥̭̟̬̜̪̣̖͒̽́̾͊̈͛̒̒̑̿͘͘l̵͓̳̋̄͘l̴̯͉̥̻̊́̀͆̀͗̎̓́̉̇̿̉̚̕o̸̢̘̙̖͖̯̱͚̮̦̦̗͉̍͂͛̉́͑̍͂̑͊̿͑̕͠͝c̷̡̡̡͍̞̤͎̠̪̪͎̼͚̫͇̳̰̫̬͆̽̓͊̋̄͊͛̍̾̏̍̿̌̀̃̔̕͝a̴̰̭̩̓̈́̈́̈́̅̊̀͊̎̌͘͝͠t̷̢̢̛̮̹̭͔̯̩̗̯̞̊̌͐̾̓̄̅͗̀̓̓͜ͅë̵̢̢͓̦͍͇͙̹͖͔͓́̍̂͗̏͋̐͑̿͑̎̈́͘ď̶̛̖̳̪̪̝͉̘̪̭̳̲͓̝̪̗̲́́̎͂͗͂̀̉̐̈́͆͘̕͜͜͜]</p>
+    <p>> quality : [<strike>unallocated</strike>]</p>
     <p><a href="https://relivesight.com">return return return return return</a></p>
     <h2>vers:ation</h2>
     <p>> [no. 03] : "If something decides it wants to fly, will it grow wings? You don't change yourself, you change the way you do things. You have to create a way to fly, even while you stay the same."</p>
