--- a/bio/index.html
+++ b/bio/index.html
@@ -18,7 +18,7 @@
     <!-- <img src="../images/home/ddd.gif" width="400px"> -->
     <p>> preferences : "i like alot of things; computers, electronics, CUSTOM (ERGO) KEYBOARDS, anime, MANGA, books, lain, juice-boxes reading, (rock, math, fantastical, complex, japanese, korean, experimental, etc) music,
     retro beige styled electronics, █████, wind, mcr, nightime, 3d printing, engineering, hand wiring, learning, programming, nier, editing, knives, writing, etc." /redundant/</p>
-    <p>> favorite color : #000000</p>
+    <p>> favorite color : #000000 #ebc5e6</p>
     <!-- discord[Omnisai#2639] : line[omnisai] :  -->
     <p>> contact : discord[𝒞𝒶𝒷𝒶𝓃𝒹𝒶𝒹𝒶𝓃#7416] : steam[Cabandadan]</p>
     <p>> associated : present</p>
