--- a/bio/index.html
+++ b/bio/index.html
@@ -4,6 +4,15 @@
 <link rel="icon" type="image/png" href="../images/home/pupilpng.png" sizes="1000x1000" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="bio.css">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123647555-2');
+</script>
 <body class="noisy"></body>
 <div class="emblem"><span class="icon-information"></span></div>
 <div class="frame">
