--- a/bio/index.html
+++ b/bio/index.html
@@ -23,13 +23,13 @@
     <p>> identitiy : human no. 105.102.249.130</p>
     <p>> classification : male ♂️</p>
         <!-- <img src="../images/bio/2.png" width="400px" class="ribbon">-->
-    <p>> introduction "zdravo, i'm a 18 year-old programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; otaku [VALIDITY:] as reffered to by Makoto Shinkai; and unprofessional artsit, novelist, conceptual futurist, engineer, amateur speedrunner, 3d-modeler, amatuer artist, yu-gi-oh and magic-the-gathering player."</p>
+    <p>> introduction "zdravo, i'm a 18 year-old programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; otaku [VALIDITY:] as reffered to by Makoto Shinkai; and unprofessional painter, novelist, conceptual futurist, engineer, amateur speedrunner, 3d-modeler, amatuer digital artist, band member, yu-gi-oh and magic-the-gathering player."</p>
     <!-- <img src="../images/home/ddd.gif" width="400px"> -->
     <p>> preferences : "i like alot of things; computers, electronics, CUSTOM (ERGO) KEYBOARDS, anime, MANGA, books, lain, juice-boxes reading, (rock, math, fantastical, complex, japanese, korean, experimental, etc) music,
-    retro beige styled electronics, █████, wind, mcr, nightime, 3d printing, engineering, hand wiring, learning, programming, nier, editing, knives, writing, etc." /redundant/</p>
-    <p>> favorite color : #000000 #ebc5e6</p>
-    <!-- discord[Omnisai#2639] : line[omnisai] :  -->
-    <p>> contact : discord[𝒞𝒶𝒷𝒶𝓃𝒹𝒶𝒹𝒶𝓃#7416] : steam[Cabandadan]</p>
+    retro beige styled electronics, █████, wind, mcr, nightime, self-expression, art, 3d printing, engineering, hand wiring, learning, programming, nier, editing, knives, writing, etc." /redundant/</p>
+    <p>> favorite color(s) : #000000 #ebc5e6</p>
+    <!--  -->
+    <p>> contact :  discord[Omnisai#2639] : line[omnisai] : reddit[omnisairen] : twitter[omnisai] : discord-two[𝒞𝒶𝒷𝒶𝓃𝒹𝒶𝒹𝒶𝓃#7416] : steam[Cabandadan]</p>
     <p>> associated : present</p>
     <p>> quality : [<strike>unallocated</strike>]</p>
     <p><a href="https://relivesight.com">return return return return return</a></p>
@@ -53,6 +53,8 @@ I flicker back."</p>
     <p>> [no. 00095] : "Mathematics catalogues everything that is not self-contradictory; within that vast inventory, physics is an island of structures rich enough to contain their own beholders."</p>
     <p>> [no. 03] : "It’s better to have questions you can’t answer than answers you can’t question."</p>
     <p>> [no. 00095] : "The unexamined life is not worth living."</p>
+    <p>> [no. 03] : "You couldn't be more wrong actually, I'm unbelievably sentimental. You know, the best thing would be to actually be as earnest as I feel. Because I know what I'm doing, just everything that I do, it knows what it is."</p>
+    <p>> [no. 00095] : "As long as you make the important decisions yourself, that’s what matters, you are the protagonist of your own life."</p>
     <p>> [no. 03] : "..."</p>
     <p><a href="/bio/static">total</a></p>
   </div>
