--- a/bio/index.html
+++ b/bio/index.html
@@ -18,7 +18,7 @@
 <div class="frame">
   <div class="piece output">
     <h1>bio:graph</h1>
-    <p>> subject [00095] : Ren {Omnisai} </p>
+    <p>> subject [00095] : Ren {Omnisai} Rose ​♡</p>
     <p>> sobriquet : Nines {YoRHa}</p>
     <p>> identitiy : human no. 105.102.249.130</p>
     <p>> classification : male ♂️</p>
