NO MORE WEIRD LINES

--- a/bio/index.html
+++ b/bio/index.html
@@ -29,7 +29,7 @@
     retro beige styled electronics, █████, wind, mcr, nightime, self-expression, art, 3d printing, engineering, hand wiring, learning, programming, nier, editing, knives, writing, etc." /redundant/</p>
     <p>> favorite color(s) : #000000 #ebc5e6</p>
     <!--  -->
-    <p>> contact :  discord[Omnisai#2639] : line[omnisai] : reddit[omnisairen] : twitter[omnisai] : discord-two[𝒞𝒶𝒷𝒶𝓃𝒹𝒶𝒹𝒶𝓃#7416] : steam[Cabandadan]</p>
+    <p>> contact :  discord[Omnisai#2639] : line[omnisai] : reddit[omnisairen] : twitter[omnisai] : steam[omnisairen] : discord-two[𝒞𝒶𝒷𝒶𝓃𝒹𝒶𝒹𝒶𝓃#7416]</p>
     <p>> associated : present</p>
     <p>> quality : [<strike>unallocated</strike>]</p>
     <p><a href="https://relivesight.com">return return return return return</a></p>
