--- a/bio/index.html
+++ b/bio/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!-- https://codepen.io/somethingformed/pen/raWJXV -->
+<head>
 <title>「ｒｅ：Ｌｉｖｅ」</title>
 <link rel="icon" type="image/png" href="../images/home/pupilpng.png" sizes="1000x1000" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -13,7 +14,9 @@
 
   gtag('config', 'UA-123647555-2');
 </script>
-<body class="noisy"></body>
+
+  </head>
+<body class="noisy">
 <div class="emblem"><span class="icon-information"></span></div>
 <div class="frame">
   <div class="piece output">
@@ -56,8 +59,9 @@ I flicker back."</p>
     <p>> [no. 03] : "You couldn't be more wrong actually, I'm unbelievably sentimental. You know, the best thing would be to actually be as earnest as I feel. Because I know what I'm doing, just everything that I do, it knows what it is."</p>
     <p>> [no. 00095] : "As long as you make the important decisions yourself, that’s what matters, you are the protagonist of your own life."</p>
     <p>> [no. 03] : "..."</p>
-    <p><a href="/bio/static">total</a></p>
+    <p><a href="/bio/static">total</a> </p>
   </div>
   <div class="piece scanlines noclick"></div>
   <div class="piece glow noclick"></div>
 </div>
+</body>
