--- a/bio/index.html
+++ b/bio/index.html
@@ -32,7 +32,7 @@
     retro beige styled electronics, █████, wind, mcr, nightime, self-expression, art, 3d printing, engineering, hand wiring, learning, programming, nier, editing, knives, writing, etc." /redundant/</p>
     <p>> favorite color(s) : #000000 #ebc5e6</p>
     <!--  -->
-    <p>> contact :  discord[Omnisai#2639] : discord-two[𝒞𝒶𝒷𝒶𝓃𝒹𝒶𝒹𝒶𝓃#7416] : <a  target="_blank" href="https://www.reddit.com/user/OmnisaiRen">reddit[omnisairen]</a> : <a  target="_blank" href="https://twitter.com/omnisai">twitter[omnisai]</a> : <a  target="_blank" href="https://www.speedrun.com/user/omnisairen">speedrunning[omnisairen]</a> : <a target="_blank" href="https://steamcommunity.com/id/omnisairen/">steam[omnisairen]</a> : <a target="_blank" href="https://www.instagram.com/omnisai.ren/">instagram[omnisai.ren]</a> : line[omnisai] : irc[omnisairen/##relivesight/freenode]</p>
+    <p>> contact :  discord[Omnisai#2639] : discord-two[𝒞𝒶𝒷𝒶𝓃𝒹𝒶𝒹𝒶𝓃#7416] : <a  target="_blank" href="https://www.reddit.com/user/OmnisaiRen">reddit[omnisairen]</a> : <a  target="_blank" href="https://twitter.com/omnisai">twitter[omnisai]</a> : <a  target="_blank" href="https://www.speedrun.com/user/omnisairen">speedrunning[omnisairen]</a> : <a target="_blank" href="https://steamcommunity.com/id/omnisairen/">steam[omnisairen]</a> : <a target="_blank" href="https://www.instagram.com/omnisai.ren/">instagram[omnisai.ren]</a> : <a target="_blank" href="https://www.twitch.tv/omnisairen">twitch[OmnisaiRen]</a> : line[omnisai] : irc[omnisairen/##relivesight/freenode]</p>
     <p>> associated : present</p>
     <p>> quality : [<strike>unallocated</strike>]</p>
     <p><a href="https://relivesight.com">return return return return return</a></p>
