--- a/bio/index.html
+++ b/bio/index.html
@@ -24,7 +24,7 @@
     <p>> subject [00095] : Ren {Omnisai} Rose ​♡</p>
     <p>> sobriquet : Nines {YoRHa}</p>
     <p>> identitiy : human no. 105.102.29.130</p>
-    <p>> classification : male ♂️</p>
+    <p>> classification : male ♂</p>
         <!-- <img src="../images/bio/2.png" width="400px" class="ribbon">-->
     <p>> introduction "zdravo, i'm a 19 year-old self-taught programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; otaku [VALIDITY:] as reffered to by Makoto Shinkai; and unprofessional painter, published author, published musician, cosplayer, engineer, amateur speedrunner, 3d-modeler, digital artist, band member, scanlator, streamer, yu-gi-oh and magic-the-gathering player."</p>
     <!-- <img src="../images/home/ddd.gif" width="400px"> -->
@@ -32,7 +32,7 @@
     retro beige styled electronics, █████, wind, mcr, nightime, self-expression, art, 3d printing, engineering, hand wiring, learning, programming, nier, editing, knives, writing, etc." /redundant/</p>
     <p>> favorite color(s) : #000000 #ebc5e6</p>
     <!--  -->
-    <p>> contact;socials :  discord[✦𝖔𝖒𝖓𝖎𝖘𝖆𝖎✦#2639] : <a  target="_blank" href="https://www.reddit.com/user/OmnisaiRen">reddit[omnisairen]</a> : <a  target="_blank" href="https://twitter.com/omnisai">twitter[omnisai]</a> : <a  target="_blank" href="https://www.speedrun.com/user/omnisairen">speedrunning[omnisairen]</a> : <a target="_blank" href="https://steamcommunity.com/id/omnisairen/">steam[【Omnisairen】]</a> : <a target="_blank" href="https://www.instagram.com/omnisai.ren/">instagram[omnisai.ren]</a> : <a target="_blank" href="https://www.twitch.tv/omnisairen">twitch[OmnisaiRen]</a> : <a target="_blank" href="https://github.com/Omnisairen">github[Omnisai]</a> : <a target="_blank" href="https://osu.ppy.sh/users/11832780">osu[Cabandadan]</a> : line[omnisai] : irc[omnisairen/##relivesight/freenode]</p>
+    <p>> contact;socials :  discord[✦𝖔𝖒𝖓𝖎𝖘𝖆𝖎✦#2639] : <a  target="_blank" href="https://www.reddit.com/user/OmnisaiRen">reddit[omnisairen]</a> : <a  target="_blank" href="https://twitter.com/omnisai">twitter[omnisai]</a> : <a  target="_blank" href="https://www.speedrun.com/user/omnisairen">speedrunning[omnisairen]</a> : <a target="_blank" href="https://steamcommunity.com/id/omnisairen/">steam[【Omnisairen】]</a> : <a target="_blank" href="https://www.instagram.com/omnisai.ren/">instagram[omnisai.ren]</a> : <a target="_blank" href="https://www.twitch.tv/omnisairen">twitch[OmnisaiRen]</a> : <a target="_blank" href="https://github.com/Omnisairen">github[Omnisai]</a> : <a target="_blank" href="https://osu.ppy.sh/users/11832780">osu[Cabandadan]</a> : line[omnisai] </p> <!--: irc[omnisairen/##relivesight/freenode]--> 
     <p>> associated : present</p>
     <p>> quality : [<strike>unallocated</strike>]</p>
     <p><a href="https://relivesight.com">return return return return return</a></p>
