--- a/bio/index.html
+++ b/bio/index.html
@@ -25,10 +25,10 @@
     <p>> sobriquet : Nines {YoRHa}</p>
     <p>> identitiy : human no. 105.102.29.130</p>
     <p>> classification : male ♂</p>
-        <!-- <img src="../images/bio/2.png" width="400px" class="ribbon">-->
-    <p>> introduction "zdravo, i'm a 19 year-old self-taught programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; otaku [VALIDITY:] as reffered to by Makoto Shinkai; and unprofessional painter, published author, published musician, cosplayer, engineer, amateur speedrunner, 3d-modeler, digital artist, band member, scanlator, streamer, yu-gi-oh and magic-the-gathering player."</p>
+      <!-- <img src="../images/bio/2.png" width="400px" class="ribbon">-->
+    <p>> introduction "zdravo, i'm a 19 year-old self-taught programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; otaku [V:] as referred to by Makoto Shinkai at the US premiere of WwY ; and unprofessional painter, published author, published musician, cosplayer, engineer, amateur speedrunner, 3d-modeler, digital artist, band member, scanlator, streamer, yu-gi-oh and magic-the-gathering player."</p>
     <!-- <img src="../images/home/ddd.gif" width="400px"> -->
-    <p>> preferences : "i like alot of things; computers, electronics, CUSTOM (ERGO) KEYBOARDS, anime, MANGA, books, lain, juice-boxes, reading, (rock, math, fantastical, complex, japanese, korean, experimental, etc) music,
+    <p>> preferences : "i like alot of things; computers, electronics, CUSTOM (ERGO) KEYBOARDS, anime, MANGA, books, lain, juice-boxes, reading, (rock, math, new-wave, complex, japanese, korean, experimental, etc) music,
     retro beige styled electronics, █████, wind, mcr, nightime, self-expression, art, 3d printing, engineering, hand wiring, learning, programming, nier, editing, knives, writing, etc." /redundant/</p>
     <p>> favorite color(s) : #000000 #ebc5e6</p>
     <!--  -->
