--- a/bio/index.html
+++ b/bio/index.html
@@ -51,7 +51,7 @@ I bathe. Calm; breathing air of the present but living in the past.
 The light flickers.
 I flicker back."</p>
     <p>> [no. 03] : "Everything that lives is designed to end. We are perpetually trapped in a never-ending spiral of life and death. Is this a curse? Or some kind of punishment? I often think about the god who blessed us with this cryptic puzzle...and wonder if we'll ever get the chance to kill him."</p>
-    <p>> [no. 00095] : "If i didnt make that promise for her, you'd be dead where you stand."</p>
+    <p>> [no. 00095] : "Why?"</p>
     <p>> [no. 03] : "If we all reacted the same way, we'd be predictable, and there's always more than one way to view a situation...It's simple: overspecialize, and you breed in weakness. It's slow death."</p>
     <p>> [no. 00095] : "Mathematics catalogues everything that is not self-contradictory; within that vast inventory, physics is an island of structures rich enough to contain their own beholders."</p>
     <p>> [no. 03] : "It’s better to have questions you can’t answer than answers you can’t question."</p>
