--- a/bio/index.html
+++ b/bio/index.html
@@ -28,7 +28,7 @@
       <p>> identitiy : human no. 105.102.29.130</p>
       <p>> classification : male ♂</p>
         <!-- <img src="../images/bio/2.png" width="400px" class="ribbon">-->
-      <p>> introduction "i'm a 19 year-old self-taught programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; otaku (as referred to by Makoto Shinkai at the US premiere of WwY); and unprofessional painter, published author, published musician, "cosplayer", engineer, amateur speedrunner, 3d-modeler, digital artist, band member, scanlator, streamer, and ex-yu-gi-oh player."</p>
+      <p>> introduction "i'm a 19 year-old self-taught programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; otaku (as referred to by Makoto Shinkai at the US premiere of WwY); and unprofessional painter, published author, published musician, "cosplayer", engineer, ex-teleportee, amateur speedrunner, 3d-modeler, digital artist, band member, scanlator, streamer, and ex-yu-gi-oh player."</p>
       <!-- <img src="../images/home/ddd.gif" width="400px"> -->
       <p>> preferences : "i like alot of things; computers, electronics, custom (ergo) keyboards, anime, manga, books, lain, juice-boxes, reading, (rock, math, new-wave, complex, japanese, korean, experimental, etc) music,
       retro beige styled electronics, █████, cloudy days, nightime, self-expression, art, 3d printing, engineering, hand-wiring, learning, programming, nier, editing, writing, etc." /redundant/</p>
