--- a/bio/index.html
+++ b/bio/index.html
@@ -23,20 +23,20 @@
   <div class="piece output">
       <div style="padding-left:90px;padding-right:155px;">
       <h1>bio:graph</h1>
-      <p>> subject [00095] : Ren {Omnisai} Rose ​♡</p>
-      <p>> sobriquet : Nines {YoRHa}</p>
-      <p>> identitiy : human no. 105.102.29.130</p>
+      <p>> subject [00095] : Ren Rose ​♡</p>
+      <p>> sobriquet : Omnisai {Nines}</p>
+      <p>> identity : human no. 105.102.29.130</p>
       <p>> classification : male ♂</p>
         <!-- <img src="../images/bio/2.png" width="400px" class="ribbon">-->
       <p>> introduction "i'm a 19 year-old self-taught programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; otaku (as referred to by Makoto Shinkai at the US premiere of WwY); and unprofessional painter, published author, published musician, "cosplayer", engineer, ex-teleportee, amateur speedrunner, 3d-modeler, digital artist, band member, scanlator, streamer, and ex-yu-gi-oh player."</p>
       <!-- <img src="../images/home/ddd.gif" width="400px"> -->
       <p>> preferences : "i like alot of things; computers, electronics, custom (ergo) keyboards, anime, manga, books, lain, juice-boxes, reading, (rock, math, new-wave, complex, japanese, korean, experimental, etc) music,
-      retro beige styled electronics, █████, cloudy days, nightime, self-expression, art, 3d printing, engineering, hand-wiring, learning, programming, nier, editing, writing, etc." /redundant/</p>
+      retro beige styled electronics, █████, cloudy days, nighttime, self-expression, art, 3d printing, engineering, hand-wiring, learning, programming, nier, editing, writing, etc." /redundant/</p>
       <p>> favorite color(s) : #000000 #ebc5e6</p>
       <!--  -->
       <p>> contact;socials :  discord[𝑜𝓂𝓃𝒾𝓈𝒶𝒾 ♡#2639] : <a  target="_blank" href="https://www.reddit.com/user/OmnisaiRen">reddit[omnisairen]</a> : <a  target="_blank" href="https://twitter.com/omnisai">twitter[omnisai]</a> : <a  target="_blank" href="https://www.speedrun.com/user/omnisairen">speedrunning[omnisairen]</a> : <a  target="_blank" href="https://www.youtube.com/channel/UCaw9NyNvudFpHxljwC_Xlmw">youtube[Omnisai Ren]</a> : <a target="_blank" href="https://steamcommunity.com/id/omnisairen/">steam[【Omnisairen】]</a> : <a target="_blank" href="https://www.instagram.com/omnisai.ren/">instagram[omnisai.ren]</a> : <a target="_blank" href="https://www.twitch.tv/omnisairen">twitch[OmnisaiRen]</a> : <a target="_blank" href="https://github.com/Omnisairen">github[Omnisai]</a></p> <!-- : <a target="_blank" href="https://osu.ppy.sh/users/11832780">osu[Cabandadan]</a>: line[omnisai] : irc[omnisairen/##relivesight/freenode]--> 
-      <p>> associated : present</p>
-      <p>> quality : [<strike>unallocated</strike>]</p>
+      <p>> association : present</p>
+      <p>> quality : [<strike>89% sugar!</strike>]</p>
       <p><a href="https://relivesight.com">return return return return return</a></p>
       <h2>vers:ation</h2>
       <p>> [no. 03] : "If something decides it wants to fly, will it grow wings? You don't change yourself, you change the way you do things. You have to create a way to fly, even while you stay the same."</p>
