yeah bio and blog

--- a/bio/index.html
+++ b/bio/index.html
@@ -26,7 +26,7 @@
       <p>> subject [00095] : ren rose ​♡</p>
       <p>> sobriquet : omnisai {nines}</p>
       <p>> identity : human no. 105.102.29.130</p>
-      <p>> classification : male ♂</p>
+      <p>> classification : he/him</p>
         <!-- <img src="../images/bio/2.png" width="400px" class="ribbon">-->
       <!-- otaku (as referred to by Makoto Shinkai at the US premiere of WwY);-->
         <p>> introduction "yo i like doing stuff on the internet! 
