--- a/bio/index.html
+++ b/bio/index.html
@@ -30,7 +30,7 @@
         <!-- <img src="../images/bio/2.png" width="400px" class="ribbon">-->
       <!-- otaku (as referred to by Makoto Shinkai at the US premiere of WwY);-->
         <p>> introduction "yo i like doing stuff on the internet! 
-        prepare to listen to me talk about myself for a whole paragraph (there should be quotes around more of these probably): i'm a 20 year-old self-taught programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; and unprofessional painter, published author, published musician, "cosplayer", engineer, ex-teleportee, amateur speedrunner, 3d-modeler, digital artist, band member, scanlator, streamer, and ex-yu-gi-oh player."</p>
+        prepare to listen to me talk about myself for a whole paragraph (there should be quotation marks around more of these probably): i'm a 20 year-old self-taught programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; and unprofessional painter, published author, published musician, "cosplayer", engineer, ex-teleportee, amateur speedrunner, 3d-modeler, digital artist, band member, scanlator, streamer, and ex-yu-gi-oh player."</p>
       <!-- <img src="../images/home/ddd.gif" width="400px"> -->
       <p>> info about the my site : <a href="https://relivesight.com/highlights">highlights</a></p>
       <p>> preferences : "i like alot of things; computers, electronics, custom (ergo) keyboards, anime, manga, books, lain, juice-boxes, reading, (rock, hypercore, new-wave, complex, japanese, neo-y2k, experimental, etc) music,
