--- a/bio/index.html
+++ b/bio/index.html
@@ -23,7 +23,7 @@
   <div class="piece output">
       <div style="padding-left:90px;padding-right:155px;">
       <h1>bio:graph</h1>
-      <p>> subject [00095] : ren rose ​♡</p>
+      <p>> subject [00095] : ren ​♡</p>
       <p>> sobriquet : omnisai {nines}</p>
       <p>> identity : human no. 105.102.29.130</p>
       <p>> classification : any</p>
@@ -32,7 +32,7 @@
         <p>> introduction "yo i like doing stuff on the internet! 
         prepare to listen to me talk about myself for a whole paragraph (there should be quotation marks around more of these probably): i'm a 20 year-old self-taught programmer; visual, graphic, motion designer and editor; video-game, manga, novel, music, poetry, art and anime enthusiast; and unprofessional painter, published author, published musician, "cosplayer", engineer, ex-teleportee, amateur speedrunner, 3d-modeler, digital artist, band member, scanlator, streamer, and ex-yu-gi-oh player."</p>
       <!-- <img src="../images/home/ddd.gif" width="400px"> -->
-      <p>> info about the my site : <a href="https://relivesight.com/highlights">highlights</a></p>
+      <p>> info about my site : <a href="https://relivesight.com/highlights">highlights</a></p>
       <p>> preferences : "i like alot of things; computers, electronics, custom (ergo) keyboards, anime, manga, books, lain, juice-boxes, reading, (rock, hypercore, new-wave, complex, japanese, neo-y2k, experimental, etc) music,
       retro beige styled electronics, █████, cloudy days, self-expression, art, 3d printing, engineering, hand-wiring, learning, programming, nier, editing, writing, etc." /redundant/</p>
       <p>> favorite color(s) : #000000 #ebc5e6</p>
